<resources>
    <string name="app_name">Film Finder</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_sign_up">Create an account-> Sign Up</string>
    <string name="already_signed_up">Already signed Up</string>
    <string name="email">  Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_sign_in"><![CDATA[Already have an account?->Sign in]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="app_logo">App Logo</string>
    <string name="username">UserName:</string>
    <string name="checkbox">Show Password</string>
    <string name="info_zace_com" />
</resources>
